docker (#6)
* primeira versão do dockerfile

* ajustado target + img para jdk 16

* revertido para java 11

* ajustes no dockerfile